# Python_avance

Séance 1 - Environnements Python & manipulation avancée des fichiers/projet_final/src/: __init__.py  main.py
Séance 1 - Environnements Python & manipulation avancée des fichiers/projet_logs/: .gitignore
Séance 1 Python/projet_final/: .gitignore  pyproject.toml
Séance 1 Python/projet_final/src/: main.py
Séance 2 - Traitement de données JSON et XML/exercices/: pyproject.toml
Séance 2 - Traitement de données JSON et XML/exercices/data/: books.xml  data1.json  data2.json
Séance 2 - Traitement de données JSON et XML/exercices/output/: books.json
Séance 2 - Traitement de données JSON et XML/exercices/src/: xml_to_json.py
Séance 2 - Traitement de données JSON et XML/mini-projet/: multi_parser.py  pyproject.toml
Séance 2 - Traitement de données JSON et XML/mini-projet/data/: data.json  data.xml  invalid.txt
Séance 2 - Traitement de données JSON et XML/output/: merged.json
Séance 2 - Traitement de données JSON et XML/src/: merge_json.py
Séance 3 - Organisation du code & bonnes pratiques/exercice/: README.md  pyproject.toml  script_monolithique.py
Séance 3 - Organisation du code & bonnes pratiques/exercice/myapp/: __init__.py  api.py  main.py
projet_final/: README.md  pyrightconfig.json  requirements.txt
projet_final/src/utils/: __init__.py  io.py
projet_logs/: README.md  pyproject.toml
projet_logs/data/: data.csv
projet_logs/output/: clean_data.csv
projet_logs/src/projet_logs/: collect_errors.py  parse_csv.py
(+1 files in other folders)
