[project]
name = "projet-logs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joadm973", email = "josue.adami@ynov.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
]

[project.scripts]
projet-logs = "projet_logs:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
