[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projet-final"
version = "0.1.0"
description = "Mini-projet Python avancé : traitement de CSV et logs avec uv"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
