[project]
name = "myapp"
version = "0.1.0"
description = "Exercice de refactorisation - Organisation du code en package Python"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.flake8]
max-line-length = 79
